* 0.11.4 (unreleased)
   * Initialize outfit Lua scripts when added in the equipment view so that flicker drive signature gets properly computed
   * Flicker drive no longer displays -10% signature range bonus twice when equipped
   * Fixed crash when selling deployed ship
   * `shark/sh01_corvette`: have the pilot jump in from the same system as the player
   * `minerva/kex03`: have mission claim the crimson gauntlet to prevent unwanted spawns
   * `dvaered/gauntlet`: have mission claim the system if it can, but not fail if it can't
   * Fixed some typos and revised writing

* 0.11.3
   * Don't run discovery event when in cinematic mode
   * Do a better job of updating old save autonav settings
   * Added more checks so tutorial messages don't appear in claimed systems
   * Fixed blinking not breaking stealth
   * Fixed auto-hail message colouring
   * Only do updates with positive delta ticks
   * Fixed cargo disappearing when buying a ship when over the cargo limit
   * Don't let the player trade ships when they have mission cargo
   * Fixed not being able to turn off point defense weapons
   * Fixed Za'lek drone bay being cheaper than the mini-bay
   * Flicker drives can not be stacked and are mutually exclusive with other blink drives
   * Decreased Nexus Drill Lance mining malus from -80% to -15%
   * Increased all mining yields by roughly 5 times
   * `sciencegonewrong/02_sciwrong`: make the drones not hostile to other factions
   * `neutral/baron_comm`: fixed trivial warning when trying to clean up baron comm event
   * `neutral/wastedump`: fixed getting rid of cargo while landed
   * Translation updates

* 0.11.2
   * Stopped autonav from preventing wobble and overshooting by crashing the entire game

* 0.11.1
   * Give all ammo back to player after doing obelisk
   * Fixed player being invincible after completing an obelisk
   * Fixed a crash when loading games while a landing hook was running
   * Fixed race condition in threadpool