@@ -8,7 +8,6 @@
   <price>470000</price>
   <gfx_store>blink_drive.webp</gfx_store>
   <description>The blink drive uses hyperdrive technology modified to create a small space-time fold allowing ships to instantly cross short distances. Pilots who often use such devices tend to have a higher amount of strong headaches than usual, but it must be safe, right?</description>
-  <desc_extra>Blinks you 500 units in the direction you are facing. Double tapping left or right allows blinking 250 units to the side. Can only be run once every 7 seconds. Performance degrades over 1,000 tonnes of mass.</desc_extra>
   <limit>blinkdrive</limit>
  </general>
  <specific type="modification">
