@@ -1,4 +1,5 @@
 * 0.11.4 (unreleased)
+   * Updated flicker drive, blink drive, and hyperbolic blink engine descriptions to be more complete and correct
    * Initialize outfit Lua scripts when added in the equipment view so that flicker drive signature gets properly computed
    * Flicker drive no longer displays -10% signature range bonus twice when equipped
    * Fixed crash when selling deployed ship
